--- a/package.json
+++ b/package.json
@@ -23,9 +23,7 @@
     }
   },
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
+    "build": "tsc && vite build"
   },
   "keywords": [],
   "author": "",
