--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,9 +1,6 @@
 {
-  "singleQuote": true,
-  "semi": false,
-  "trailingComma": "all",
-  "printWidth": 100,
-  "proseWrap": "never",
   "arrowParens": "avoid",
-  "endOfLine": "lf"
+  "printWidth": 100,
+  "semi": false,
+  "singleQuote": true
 }
